--- a/Cliente/front/src/app/component/principal/principal.component.html
+++ b/Cliente/front/src/app/component/principal/principal.component.html
@@ -1,1 +1,93 @@
-<p>principal works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="http://localhost:4200/principal">LF script</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <div class="collapse navbar-collapse" id="navbarColor01">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="http://localhost:4200/principal">Home
+              <span class="visually-hidden">(current)</span>
+            </a>
+          </li>
+          
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Archivo</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">Abrir</a>
+              <a class="dropdown-item" href="#">Guardar</a>
+              <a class="dropdown-item" href="#">Guardar como</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="">Crear pestaña</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="http://localhost:4200/reportes">Reportes</a>
+          </li>
+        </ul>
+        
+      </div>
+    </div>
+  </nav>
+  
+  
+
+  <div class="container-fluid p-3">
+    <div class="row align-items-center">
+        <div class="col"> 
+          <button type="button" class="btn btn-dark">EJECUTAR</button>
+        </div>
+    </div>
+    <div class="row align-items-center">
+      <div class="col align-self-end">
+        <h4>Editor</h4>¿
+      </div>
+      <div class="col align-self-end">
+        <h4>Consola</h4>
+      </div>
+    </div>
+    <div class="row align-items-center">
+      <div class="col">
+        
+
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                    <a class="nav-link active"  #assA data-bs-toggle="tab" href="#p1">Pestaña 1</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-bs-toggle="tab" href="#p2">Pestaña 2</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-bs-toggle="tab" href="#p3">Pestaña 3</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-bs-toggle="tab" href="#p4">Pestaña 4</a>
+            </li>
+            
+        </ul>
+        <div id="myTabContent" class="tab-content">
+            <div class="tab-pane fade active show" id="p1">
+                <textarea name="" id="" cols="60" rows="20"></textarea>
+            </div>
+            <div class="tab-pane fade" id="p2">
+                <textarea name="" id="" cols="60" rows="20"></textarea>
+            </div>
+            <div class="tab-pane fade" id="p3">
+                <textarea name="" id="" cols="60" rows="20"></textarea>
+            </div>
+            <div class="tab-pane fade" id="p4">
+                <textarea name="" id="" cols="60" rows="20"></textarea>
+            </div>
+            
+        </div>
+  
+  
+    </div>
+      <div class="col">
+        <textarea name="" id="" cols="58" rows="20"> </textarea>
+      </div>
+    </div>
+  </div>
+  
