--- a/Cliente/front/src/app/component/principal/principal.component.html
+++ b/Cliente/front/src/app/component/principal/principal.component.html
@@ -37,12 +37,12 @@
   <div class="container-fluid p-3">
     <div class="row align-items-center">
         <div class="col"> 
-          <button type="button" class="btn btn-dark">EJECUTAR</button>
+          <button type="button" (click) = "ejecutar()" class="btn btn-dark">EJECUTAR</button>
         </div>
     </div>
     <div class="row align-items-center">
       <div class="col align-self-end">
-        <h4>Editor</h4>¿
+        <h4>Editor</h4>
       </div>
       <div class="col align-self-end">
         <h4>Consola</h4>
@@ -69,7 +69,7 @@
         </ul>
         <div id="myTabContent" class="tab-content">
             <div class="tab-pane fade active show" id="p1">
-                <textarea name="" id="" cols="60" rows="20"></textarea>
+               editor:  <textarea #E1 name="" [(ngModel)] ="data.editor" id="editor_LF" cols="60" rows="20"></textarea>
             </div>
             <div class="tab-pane fade" id="p2">
                 <textarea name="" id="" cols="60" rows="20"></textarea>
@@ -86,7 +86,7 @@
   
     </div>
       <div class="col">
-        <textarea name="" id="" cols="58" rows="20"> </textarea>
+        <textarea #Consola  name="" id="Consola_LF" cols="58" rows="20">{{recibido.respuest}} </textarea>
       </div>
     </div>
   </div>
