--- a/Cliente/front/src/app/component/principal/principal.component.html
+++ b/Cliente/front/src/app/component/principal/principal.component.html
@@ -16,7 +16,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Archivo</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Abrir</a>
+              <a class="dropdown-item" (change)="abrirArchivo($event)" href="#">Abrir</a> <input id = "fileInput" type='file'/>
               <a class="dropdown-item" href="#">Guardar</a>
               <a class="dropdown-item" href="#">Guardar como</a>
               <div class="dropdown-divider"></div>
@@ -69,7 +69,7 @@
         </ul>
         <div id="myTabContent" class="tab-content">
             <div class="tab-pane fade active show" id="p1">
-               editor:  <textarea #E1 name="" [(ngModel)] ="data.editor" id="editor_LF" cols="60" rows="20"></textarea>
+               <textarea #E1 name="" [(ngModel)] ="data.editor" id="editor_LF" cols="60" rows="20"></textarea>
             </div>
             <div class="tab-pane fade" id="p2">
                 <textarea name="" id="" cols="60" rows="20"></textarea>
@@ -90,4 +90,6 @@
       </div>
     </div>
   </div>
+
+
   
