--- a/Cliente/front/src/app/component/principal/principal.component.html
+++ b/Cliente/front/src/app/component/principal/principal.component.html
@@ -16,7 +16,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Archivo</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item"  href="#">Abrir</a> <input id = "fileInput" type='file'/>
+              <a class="dropdown-item"  href="#">Abrir</a> <input (change) = "abrirArchivo($event)"  id = "fileInput" type='file'/>
               <a class="dropdown-item" href="#">Guardar</a>
               <a class="dropdown-item" href="#">Guardar como</a>
               <div class="dropdown-divider"></div>
